tester/testsuite/good/assignedargument.jl
int heyo(int greeting) {
    greeting = 5;
    return 0;
}

int main() {
    int greeting = 6;
    int b = heyo(greeting);
    printInt(greeting);
    return 0;
}