tester/testsuite/bad/bad036.jl
int if(){ return 1; }

int main() { return 1; }
